@@ -1,2 +1,6 @@
 为了打开中文，请自行下载资源包
 体积较大，默认不提供
+
+另第一次启动请注意设置启动附加指令为如下
+-Dfml.ignoreInvalidMinecraftCertificates=true -Dfml.ignorePatchDiscrepancies=true -XX:PermSize=256M -XX:MaxPermSize=256M -Xincgc
+其中256M可以尝试改为128M，也许能用（如果可用内存不足2G）
